contraints for table cell2

--- a/CodingChallengeExpedia/ViewController/Cells/EventTableViewCell.xib
+++ b/CodingChallengeExpedia/ViewController/Cells/EventTableViewCell.xib
@@ -20,32 +20,18 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLl-wr-xho">
-                        <rect key="frame" x="124" y="91" width="309" height="20.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="309" id="LBj-ks-Oip"/>
-                            <constraint firstAttribute="height" constant="20.5" id="RMZ-Ua-G4w"/>
-                        </constraints>
+                        <rect key="frame" x="124" y="85" width="34.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="venue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAb-ut-pWi">
-                        <rect key="frame" x="124" y="60" width="317" height="20.5"/>
+                        <rect key="frame" x="124" y="56" width="317" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20.5" id="SSZ-pQ-U4O"/>
                             <constraint firstAttribute="width" constant="317" id="hvw-NC-g6I"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hma-kN-VDM">
-                        <rect key="frame" x="124" y="5" width="317" height="54"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="54" id="gDA-Ks-hCp"/>
-                            <constraint firstAttribute="width" constant="317" id="qhm-zD-u2h"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -67,26 +53,30 @@
                             <color key="titleColor" red="1" green="0.082858907910000001" blue="0.28487266900000002" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hma-kN-VDM">
+                        <rect key="frame" x="124" y="11" width="317" height="38"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="38" id="T90-x2-aGt"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Hma-kN-VDM" firstAttribute="top" secondItem="jF3-yK-dRG" secondAttribute="top" id="4OJ-ch-qLp"/>
                     <constraint firstItem="Mdf-f7-mVe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6Pn-O5-kDZ"/>
-                    <constraint firstItem="zLl-wr-xho" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="7E9-8n-5be"/>
-                    <constraint firstAttribute="bottom" secondItem="zLl-wr-xho" secondAttribute="bottom" constant="11" id="BbN-El-Q8i"/>
-                    <constraint firstAttribute="trailing" secondItem="Hma-kN-VDM" secondAttribute="trailing" constant="9" id="IUa-G6-cmq"/>
-                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" constant="1" id="N0a-vq-H7I"/>
-                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" constant="1" id="OsD-Nw-N5c"/>
+                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" constant="8" symbolic="YES" id="G5j-4a-Eb4"/>
+                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" constant="7" id="LdX-Ba-px7"/>
+                    <constraint firstItem="Hma-kN-VDM" firstAttribute="trailing" secondItem="LAb-ut-pWi" secondAttribute="trailing" id="MdG-oY-TkS"/>
                     <constraint firstItem="Mdf-f7-mVe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SgW-xj-cSx"/>
-                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" constant="10.5" id="U8N-ih-0yz"/>
-                    <constraint firstItem="zLl-wr-xho" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="cFC-Ng-sMo"/>
                     <constraint firstAttribute="trailing" secondItem="LAb-ut-pWi" secondAttribute="trailing" constant="9" id="h4T-3W-Nov"/>
-                    <constraint firstItem="Hma-kN-VDM" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="n7E-9e-e6S"/>
-                    <constraint firstItem="LAb-ut-pWi" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="r75-6b-K9n"/>
+                    <constraint firstItem="zLl-wr-xho" firstAttribute="leading" secondItem="LAb-ut-pWi" secondAttribute="leading" id="j1c-jL-V99"/>
+                    <constraint firstItem="Hma-kN-VDM" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="lK8-EV-zDa"/>
+                    <constraint firstItem="Hma-kN-VDM" firstAttribute="leading" secondItem="LAb-ut-pWi" secondAttribute="leading" id="ldT-BY-Yze"/>
                     <constraint firstAttribute="bottom" secondItem="jF3-yK-dRG" secondAttribute="bottom" constant="10.5" id="rfw-oY-Ae8"/>
                     <constraint firstItem="jF3-yK-dRG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="sKw-1A-BKO"/>
-                    <constraint firstAttribute="trailing" secondItem="zLl-wr-xho" secondAttribute="trailing" constant="17" id="tep-83-6ud"/>
                     <constraint firstItem="jF3-yK-dRG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="wtC-mp-kMy"/>
-                    <constraint firstItem="Hma-kN-VDM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="zIF-IR-iJZ"/>
-                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" constant="10.5" id="zqt-rC-XEj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
